--- a/diplomski_rad.tex
+++ b/diplomski_rad.tex
@@ -1434,12 +1434,31 @@ izvedbi koje proizlaze iz različitih sklopovskih i programskih pristupa.
 % esc A : 3800 rpm @ 20%
 % esc A : 1400 rpm @ 10%
 
+% esc B : 5714 rpm @ 97%
+% esc B : 3203 rpm @ 50%
+% esc B : 1270 rpm @ 20%
+% esc B : 703 rpm @ 10%
+% esc B : 307 rpm @ 5%
+
 % PROPELER
 %
 % esc A : 6520 rpm @ 63.5% -> maxout
 % esc A : 3106-3153 rpm @ 50%
 % esc A : 1495-1510 rpm @ 20%
 % esc A : 714-730 rpm @ 10%
+
+% esc B : 3650 rpm @ 77% -> maxout
+% esc B : 2607 rpm @ 50%
+% esc B : 1096 rpm @ 20%
+% esc B : 484 rpm @ 10%
+% esc B : 309 rpm @ 5%
+
+% ubrzanje enkoder
+%
+% esc A : 4900 @ 26% duty cycle -> snimljeno ubrzanje sa 1300 @ 8% na 4900 @ 26% 0409_8
+% esc A : 6700 @ 100% duty cycle -> snimljeno ubrzanje sa 1300 @ 8% na 6700 @ 100% 0409_9
+
+% esc B : 4400 @ 70% duty cycle -> snimljeno ubrzanje sa 1500 @ 23% na 4400 @ 26% 0409_15
 
 \missingfigure{Tablica s usporedbom minimalne i maksimalne brzine vrtnje (RPM) za ESC A i ESC B.}
 \label{tab:usporedba_brzina}
